[project]
name = "tsp"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Hietan", email = "hietan622@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.5.7",
    "mypy>=1.11.1",
    "pytest>=8.3.2",
]

[tool.rye.scripts]
lint = "ruff check ."
fmt = "ruff format ."

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tsp"]
