[project]
name = "tsp"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Hietan", email = "hietan622@gmail.com" }
]
dependencies = [
    "numpy>=2.0.1",
    "pulp>=2.9.0",
    "matplotlib>=3.9.1.post1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
	"COM812",
	"D", # Ignore docstrings
	"INP001",
	"ISC001", 
]

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.5.7",
    "mypy>=1.11.1",
    "pytest>=8.3.2",
]

[tool.rye.scripts]
main = "python src/main.py"
lint = "ruff check src/"
lint_fix = "ruff check src/ --fix"
lint_fix_diff = "ruff check src/ --fix --diff"
fmt = "ruff format src/"
fmt_check = "ruff format src/ --check"
fmt_diff = "ruff format src/ --diff"
mypy = "mypy src/"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tsp"]
